# organic-dump-client-application

./: CMakeLists.txt  README.md  test_crypto_client.cpp  test_deps.cpp
examples/: test_crypto_client.cpp
src/: CliConfig.cpp  CliConfig.h  Client.cpp  Client.h  ProtobufServer.cpp  ProtobufServer.h  ServerAction.h  SoilMoistureMonitoringClient.cpp  SoilMoistureMonitoringClient.h  main.cpp  monitor_soil_moisture_main.cpp
